--- a/led-control-app/tsconfig.node.json
+++ b/led-control-app/tsconfig.node.json
@@ -1,4 +1,8 @@
 {
   "extends": "./tsconfig.json",
+  "compilerOptions": {
+    "composite": true,
+    "outDir": "dist-node"
+  },
   "include": ["vite.config.ts"]
 }
